--- a/.gitignore
+++ b/.gitignore
@@ -104,3 +104,12 @@ dist
 .tern-port
 
 lib
+
+# yarn2
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
