--- a/package.json
+++ b/package.json
@@ -13,5 +13,19 @@
     "ts-node": "^10.2.1",
     "typescript": "^4.4.3"
   },
-  "packageManager": "yarn@3.0.2"
+  "packageManager": "yarn@3.0.2",
+  "devDependencies": {
+    "husky": "^7.0.2",
+    "lint-staged": "^11.2.0",
+    "pinst": "^2.0.0",
+    "prettier": "2.4.1"
+  },
+  "scripts": {
+    "postinstall": "husky install",
+    "prepublishOnly": "pinst --disable",
+    "postpublish": "pinst --enable"
+  },
+  "lint-staged": {
+    "**/*": "prettier --write --ignore-unknown"
+  }
 }
