--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "target": "es6",
     "module": "commonjs",
     "rootDir": "./src",
-    "outDir": "./lib",
+    "outDir": "./dist",
     "moduleResolution": "node",
     "sourceMap": true,
     "removeComments": true,
